--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -121,6 +121,7 @@
     width: 4px;
 }
 /* Chat Area */
+.theme-dark .content-MLh4nU,
 .theme-dark .noChannel-Z1DQK7,
 .theme-dark .gameLibrary-TTDw4Y,
 .theme-dark .applicationStore-1pNvnv {
