--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -829,7 +829,7 @@
 .theme-light .themeDefault-24hCdX.valueChecked-m-4IJZ {
     background: #2b2929;
 }
-.theme-dark .checkbox .checkbox-inner input[type=checkbox]:checked+span {
+.theme-dark .checkbox-3kaeSU .checkboxInner-3yjcPe .checkboxElement-1qV33p:checked+span {
     background-color: #121212;
     border-color: hsla(0, 13%, 89%, 0.72);
 }
