--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2310,3 +2310,6 @@ svg polyline[stroke="#7289da"] {
 .closeWrapper-9ScmSq {
     margin-top: 24px;
 }
+.theme-dark .popout-2sKjHu {
+    background-color: #1e1e1e !important;
+}
