--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1251,15 +1251,6 @@
 .theme-light .searchResultsWrap-2DKFzt .searchResult-3pzFAB .hit-NLlWXA {
     background-color: #b9b9b9;
 }
-#app-mount .messageGroupWrapper-o-Zw7G:hover .actionButtons-1sUUug{
-    background: rgba(0,0,0,0.1);
-    box-shadow: 0 0 transparent;
-}
-#app-mount .actionButtons-1sUUug .jumpButton-3DTcS_,
-#app-mount .searchResultsWrap-2DKFzt .action-buttons .jump-button {
-    background-color: #0c0b0b;
-    color: #efefef;
-}
 .theme-dark .message-2qRu38 {
     background: #1b1b1c;
 }
@@ -1324,14 +1315,7 @@
 }
 .messageGroupWrapper-o-Zw7G:hover {
     transition: 365ms cubic-bezier(0.17, 0.38, 0.71, 0.92);
-    transition-delay: 250ms;
-}
-.theme-dark .messageGroupWrapper-o-Zw7G {
-    background: #1a1a1a;
-    border-color: rgba(236, 224, 224, 0.26);;
-}
-.theme-dark .messageGroupWrapper-o-Zw7G:hover {
-    border-color: rgba(236, 224, 224, 0.8);
+    transition-delay: 150ms;
 }
 .theme-light .messageGroupWrapper-o-Zw7G {
     background: #eeeef6;
@@ -1466,9 +1450,7 @@
 #app-mount .action-1lSjCi {
     background-color: #181818;
 }
-.theme-dark .header-ykumBX {
-    background: #181818;
-}
+
 #app-mount .create-3jownz .actionButton-2PeQbJ {
     background-color: transparent;
     border: 1px solid #656768;
@@ -2309,4 +2291,81 @@ svg polyline[stroke="#7289da"] {
 .inner-tyMogq > div {
     margin-left: -1px;
     padding-left: 1px;
+}
+
+/* 2/2020 */
+.channelTextArea-rNsIhG {
+    background-color: transparent;
+    margin: 24px 0;
+}
+.form-2fGMdU:before {
+    background-image: none;
+}
+.da-divider span.da-content{
+    background-color: var(--dm-chat-bg);
+}
+.theme-dark .wrapper-2aW0bm {
+    background-color: #1d1d1d;
+    border-radius: 0;
+    box-shadow: 1px 1px 4px 0px #77777777;
+}
+.nowPlayingColumn-2sl4cE {
+    background-color: #1e1e1e
+}
+.peopleColumn-29fq28 {
+    background-color: var(--dm-chat-bg, #1f1f1f);
+}
+/* Pinned Messages & mentions*/
+.header-ykumBX {
+    padding: 8px 0;
+    margin: 0 auto;
+    background-color: transparent;
+}
+.header-ykumBX::after {
+    content: '';
+    position: absolute;
+    width: 150%;
+    height: 1px;
+    left: -25%;
+    bottom: 2px;
+
+    background-image: linear-gradient(90deg, transparent , #cccccca8, transparent);
+}
+.recentMentionsPopout-2fmau1 .header-ykumBX::after {
+    bottom: -2px
+}
+.base-1x0h_U {
+    color: #b1b1b1;
+}
+.messagesPopout-24nkyi {
+    padding: 4px;
+
+}
+.theme-dark .messageGroupWrapper-o-Zw7G {
+    background-color: #1e1e1e;
+    border: none;
+    position: relative;
+}
+.theme-dark .messageGroupWrapper-o-Zw7G:not(:last-of-type)::after {
+    content: '';
+    position: absolute;
+    width: 80%; height: 1px;
+    left: 10%;
+    margin-top: -2px;
+    background-image: linear-gradient(90deg, transparent , #cccccca8, transparent);
+}
+.jumpButton-3DTcS_ {
+    background-color: #a2a2a2;
+    border-radius: 0;
+    color: #1e1e1e;
+    font-size: 0.75rem;
+}
+.recentMentionsPopout-2fmau1 .header-ykumBX {
+    display: grid;
+}
+.recentMentionsPopout-2fmau1 .header-ykumBX h3 {
+    margin: auto;
+}
+.channelSeparator-1MxuvT {
+    margin: 8px 4px 2px;
 }
