--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2372,3 +2372,6 @@ svg polyline[stroke="#7289da"] {
 .channelSeparator-1MxuvT {
     margin: 8px 4px 2px;
 }
+.scrollerSpacer-1Rp0XE {
+    display: none
+}
