--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1887,7 +1887,8 @@
     background-size: 18px 22px;
 }
 /* */
-/* Status Test */
+/* Status Test */ 
+/*
 .da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem{
     display: inline-flex;
     width: 60px;
