--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1898,75 +1898,89 @@
 }
 /* */
 /* Status Test */ 
-/*
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem{
+#status-picker .da-scroller::-webkit-scrollbar {
+    width: 0; height: 0;
+    visibility: hidden;
+    display: none;
+}
+#status-picker .da-scroller {
+    padding: 0;
+    margin: 0;
+}
+#status-picker .da-scroller {
+    overflow: visible !important;
+    width: 240px;
+}
+#status-picker .da-item{
     display: inline-flex;
     width: 60px;
     overflow: hidden;
     height: 52px;
     flex-direction: unset;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) {
+#status-picker {
     position: absolute;
-    left: 70px !important;
-    width: 240px !important;
-    margin-top: 38px;
-    height: 52px !important;
+    left: -8px !important;
+    width: 250px !important;
+    height: 120px !important;
     transition-delay: 10ms;
     border-radius: 0;
-    bottom: 0 !important;
+    bottom: -13px;
     transition: 250ms ease-in;
+    overflow: visible;
+    background-color: #ea0b0b00; box-shadow: none;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-helper,
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-separator {display: none;}
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-menu{
+#status-picker .da-helper,
+#status-picker .da-separator {display: none;}
+#status-picker .da-menu{
     width: 240px;
     border-radius: 0;
     bottom: 0;
     padding: 0;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusIconText div+div {display: none;}
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem {
+#status-picker .da-statusIconText div+div {display: none;}
+#status-picker .da-item {
     transition: 350ms ease-in, box-shadow 500ms ease;
-    background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25))
+    background-image: linear-gradient(140deg, transparent,rgba(0,0,0,0.15), rgba(0,0,0,.25));
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-status {
+#status-picker .da-status {
     background-color: transparent;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:first-child {
+#status-picker .da-item:first-child {
     background-color: #43b581;
     transition-delay: 150ms;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(3) {
+#status-picker .da-item:nth-child(3) {
     background-color: #faa61a;
     transition-delay: 200ms;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(4){
+#status-picker .da-item:nth-child(4){
     background-color: #f04747;
     transition-delay: 250ms;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:nth-child(5){
+#status-picker .da-item:nth-child(5){
     background-color: #747f8d;
     transition-delay: 300ms;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:hover {
+#status-picker .da-item:hover {
     opacity: 0.9;
     transition: 175ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem:active {
+#status-picker .da-item:active {
     transform: scale(0.95);
     transition: 120ms ease-in;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusIconText *{
+#status-picker .da-statusIconText *{
     display: none;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-statusItem {
+#status-picker .da-item {
     left: 0;
     top:0;
     margin: 0;
     border-radius: 0;
+    background-color: #313030;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem {
+#status-picker .da-menu {
     position: absolute;
     left: 100% !important;
     margin: 0;
@@ -1981,24 +1995,13 @@
     max-height: 52px;
     font-size: 0.65rem;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-customStatus {
+#status-picker .da-customStatus {
     width: auto;
     font-size: 0.67em;
     color: #d7d1d1;
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-customStatusIcon {
+#status-picker .da-item:not(:nth-child(7)) .da-statusItem {
     display: none;
-}
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem:hover .da-clearStatus {
-    top: 62%;
-    opacity: 1;
-    transition: 350ms ease-in;
-}
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-clearStatus {
-    position: absolute;
-    left: 40%;
-    top: 1000%;
-    opacity: 0;
 }
 @keyframes slide-in {
     0% {width: 2px;opacity:0;min-width: unset;}
@@ -2007,10 +2010,13 @@
     75%{width: 50px;opacity: 1;min-width: unset;}
     100%{width: 60px;opacity: 1;min-width: unset;}
 }
-.da-layer[style*="left: 80px;"]:not([layer-id]):not([style*="top:"]) .da-menuItem {
+#status-picker .da-menu {
     animation: slide-in ease-in 450ms 1;
 }
-
+#status-picker .da-item:nth-child(7) {
+    width: 240px;
+    height: 60px;
+}
 /* Misc */
 #app-mount .da-headerStreaming {
     background: #593695;
@@ -2393,4 +2399,22 @@ svg polyline[stroke="#7289da"] {
 }
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O), .da-colorDefault.da-focused {
     background-color: var(--dusk-activate);
+}
+/* 7-2020 changes/fixes */
+.theme-dark .container-VSDcQc .sectionTag-pXyto9 {
+    background: #1a1a1a
+}
+.theme-dark .pageWrapper-1PgVDX {
+    background: var(--dm-bg-chat)
+}
+.da-checkbox path[fill="#7289da"] {
+    fill: none;
+}
+.sizeSmall-1jtLQy .item-26Dhrx{width: 95%;}
+.sizeSmall-1jtLQy .item-26Dhrx[style*="background"] {
+    background: var(--dusk-background-2) !important;
+    border-color: var(--dusk-activate, hsla(0, 0%, 35%, .25)) !important;
+}
+.sizeSmall-1jtLQy .da-item .da-checkbox path[fill="#7289da"] {
+    fill: var(--dusk-background-2);
 }
