--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1568,6 +1568,8 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
     width: 100%; height: 100%;
 }
 .roleRemoveIcon-2-TeGW path {fill: #b34747;}
+.da-roleName {pointer-events: none;}
+
 /* Context Menu */
 .theme-dark .contextMenu-HLZMGh {
     background-color: #201f1f;
