--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -562,15 +562,11 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
     transition: 275ms ease-in;
     color: #202020 !important;
 }
-.theme-dark .bd-pfbtn,
-.theme-dark .bda-slist .bda-footer button {
-    background-color: #d1cece;
+#bd-settingspane-container .bd-pfbtn, #bd-settingspane-container .bda-slist .bda-footer button {
+    background-color: transparent;
+    border: 1px #d1cece solid;
     color: #0f0f10;
-}
-.theme-light .bd-pfbtn,
-.theme-light .bda-slist .bda-footer button {
-    color: #d1cece;
-    background-color: #0f0f10;
+    border-radius: 0;
 }
 .theme-dark .wanderingCubesItem-WPXqao {
     background-color: #5d5e60;
