--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -565,8 +565,8 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
 #bd-settingspane-container .bd-pfbtn, #bd-settingspane-container .bda-slist .bda-footer button {
     background-color: transparent;
     border: 1px #d1cece solid;
-    color: #0f0f10;
-    border-radius: 0;
+    color: #d1cece;
+    border-radius: 0 !important;
 }
 .theme-dark .wanderingCubesItem-WPXqao {
     background-color: #5d5e60;
