--- a/null/null.theme.css
+++ b/null/null.theme.css
@@ -9,6 +9,8 @@
   * @invite QRxZPvc
   * @website https://github.com/Asteria5675/BetterDiscordThemes/blob/master/null/README.md
  */
+ /* Null Import | Don't Delete */
+ @import url('https://asteria5675.github.io/BetterDiscordThemes/SourceCodes/src/null.css');
   /* Imports */
  @import url('https://asteria5675.github.io/addons/Bigger_Chat_Avatars.css');
  @import url('https://asteria5675.github.io/addons/null_addons.css');
