--- a/null/null.theme.css
+++ b/null/null.theme.css
@@ -40,7 +40,9 @@
         -second value [s] is saturation         [ --saturation: 0%; --> --saturation: 12%   ]
         -third value [l] is lightness           [ --lightness: 0%; --> --lightness: 15%     ]
 
-*/
+Changing the above values will NOT CHANGE ANYTHING
+Change the values below (NOT the ones contained within "/*...*/"
+/**/
 .theme-dark {
     /*      Test Variables to mess around for different colours                */
         --test: hsla(217, 12%, 15%, 0.99) ; /* hsla(217, 33%, 18%, 0.99); */
